fix(docker): docker push requires only 1 arg

--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -33,7 +33,7 @@ jobs:
         run: docker build -t digitop/static:1.0.0 -t digitop/static:latest .
       
       - name: Push to Docker Hub
-        run: docker push digitop/static:1.0.0 digitop/static:latest
+        run: docker push digitop/static:1.0.0 && docker push digitop/static:latest
 
       
 
