--- a/.github/workflows/deploy-diginext.yml
+++ b/.github/workflows/deploy-diginext.yml
@@ -8,7 +8,8 @@ on:
 
 # ENVIRONMENT VARIABLES
 env:
-  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  CLUSTER: topgroup-k3s
+  REGISTRY: digitopdockerhub-u
 
 # CI/CD STEPS
 jobs:
@@ -20,14 +21,14 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Deploy to Diginext
         uses: digitopvn/diginext-actions@v0
         with:
           dx_key: ${{ secrets.DX_KEY }}
-          cluster: topgroup-k3s
-          registry: digitopdockerhub-u
+          cluster: ${{ env.CLUSTER }}
+          registry: ${{ env.REGISTRY }}
+          port: "3000"
 
       
 
