fix(docs): improve docs

--- a/.github/workflows/deploy-diginext.yml
+++ b/.github/workflows/deploy-diginext.yml
@@ -9,12 +9,12 @@ on:
 # ENVIRONMENT VARIABLES
 env:
   CLUSTER: topgroup-k3s
-  REGISTRY: digitopdockerhub-u
+  REGISTRY: digitopdockerhub
 
 # CI/CD STEPS
 jobs:
   docker-release:
-    name: Deploy to Diginext
+    name: Deploy using Diginext
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -22,13 +22,10 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Deploy to Diginext
-        uses: digitopvn/diginext-actions@v0
+      - name: Deploy to TOP DEV LOCAL using Diginext
+        uses: digitopvn/diginext-actions@v1.10
         with:
-          dx_key: ${{ secrets.DX_KEY }}
-          cluster: ${{ env.CLUSTER }}
-          registry: ${{ env.REGISTRY }}
-          port: "3000"
-
-      
-
+          api_key: ${{ secrets.DX_API_KEY }}
+          cluster: topgroup-k3s
+          registry: digitopdockerhub
+          port: "80"
